--- a/package.json
+++ b/package.json
@@ -48,12 +48,13 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^9.8.0",
     "eslint-config-next": "14.2.3",
     "nodemon": "^3.1.3",
     "postcss": "^8",
