--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "sonner": "^1.5.0",
+    "strip": "^3.0.0",
+    "stripe": "^16.6.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
