--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "sonner": "^1.5.0",
     "strip": "^3.0.0",
     "stripe": "^16.6.0",
+    "swiper": "^11.1.9",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
