--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-email/components": "^0.0.22",
     "@tanstack/react-query": "4.36.1",
     "@trpc/client": "^10.45.2",
     "@trpc/next": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
+    "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "lucide-react": "^0.378.0",
@@ -43,6 +46,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "resend": "^3.5.0",
     "sonner": "^1.5.0",
     "strip": "^3.0.0",
     "stripe": "^16.6.0",
@@ -60,6 +64,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "copyfiles": "^2.4.1",
     "eslint": "^9.8.0",
     "eslint-config-next": "14.2.3",
     "nodemon": "^3.1.3",
