--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build:next": "next build",
-    "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
-    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
-    "build:payload": "cross-env  PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build --verbose",
-    "build:server": "tsc --project tsconfig.server.json",
-    "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
-    "build": "yarn build:payload && yarn build:server && yarn copyfiles && yarn build:next",
-    "start": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production node dist/server.js",
-    "lint": "next lint"
+  
+  "build:payload": "cross-env NODE_OPTIONS='--max_old_space_size=1024' PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build --verbose",
+  "build:server": "tsc --project tsconfig.server.json",
+  "build:next": "next build",
+  "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
+  "build": "yarn build:payload && yarn build:server && yarn copyfiles && yarn build:next",
+  "start": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production node dist/server.js",
+  "lint": "next lint"
+
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
